# tudelft-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tudelft_cli/: main.py
src/tudelft_cli/app/services/: course_link.py  ec.py  enroll_courses.py  enroll_exam.py  enrollments.py  exam_opportunities.py  grades.py  login.py  profile.py  suggest_courses.py  suggest_exams.py
src/tudelft_cli/cli/: auth.py  course.py  ec.py  enroll_courses.py  enroll_exam.py  enrollments.py  grades.py  root.py  shell.py  suggest_courses.py  suggest_exams.py  whoami.py
src/tudelft_cli/domain/: errors.py  interfaces.py  models.py
src/tudelft_cli/formatting/: course_link.py  ec.py  enrollments.py  grades.py  profile.py  render_mode.py  suggest_courses.py  suggest_exams.py
src/tudelft_cli/infra/auth/: browser_auth.py  session_store.py
src/tudelft_cli/infra/config/: settings.py
src/tudelft_cli/infra/portal/: mytudelft_portal.py
