[project]
name = "tudelft-cli"
version = "0.1.0"
description = "CLI for TU Delft student portal workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "pydantic>=2.7",
  "rich>=13.7",
  "keyring>=25.2",
  "playwright>=1.46",
  "questionary>=2.0",
]

[project.scripts]
tudelft = "tudelft_cli.main:main"

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
